# rustdoc_demo

./: Cargo.toml  README.md
src/: lib.rs  mod1.rs  mod2.rs  mod3.rs
